tests/Tuc/Fixtures/errors/GroupMustHaveBody.tuc
tuc parse error test
participants
    GenericService parts

group Without a body
